    list. (Anupam Seth via bobby)

    HADOOP-7868. Hadoop native fails to compile when default linker
    option is -Wl,--as-needed. (Trevor Robinson via eli)

    HADOOP-8655. Fix TextInputFormat for large deliminators. (Gelesh via
    bobby) 

Release 0.23.7 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

Release 0.23.6 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
    HADOOP-9217. Print thread dumps when hadoop-common tests fail.
    (Andrey Klochkov via suresh)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9072. Hadoop-Common-0.23-Build Fails to build in Jenkins 
    (Robert Parker via tgraves)

    HADOOP-8992. Enhance unit-test coverage of class HarFileSystem (Ivan A.
    Veselovsky via bobby)

    HADOOP-9038. unit-tests for AllocatorPerContext.PathIterator (Ivan A.
    Veselovsky via bobby)

    HADOOP-9105. FsShell -moveFromLocal erroneously fails (daryn via bobby)

    HADOOP-9097. Maven RAT plugin is not checking all source files (tgraves)

Release 0.23.5 - 2012-11-28

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-8932. JNI-based user-group mapping modules can be too chatty on 
    lookup failures. (Kihwal Lee via suresh)

    HADOOP-8930. Cumulative code coverage calculation (Andrey Klochkov via
    bobby)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-8906. paths with multiple globs are unreliable. (Daryn Sharp via
    jlowe)

    HADOOP-8811. Compile hadoop native library in FreeBSD (Radim Kolar via
    bobby)

    HADOOP-8962. RawLocalFileSystem.listStatus fails when a child filename
    contains a colon (jlowe via bobby)

    HADOOP-8986. Server$Call object is never released after it is sent (bobby)

    HADOOP-9022. Hadoop distcp tool fails to copy file if -m 0 specified
    (Jonathan Eagles vai bobby)

    HADOOP-9025. org.apache.hadoop.tools.TestCopyListing failing (Jonathan
    Eagles via jlowe)

Release 0.23.4

  INCOMPATIBLE CHANGES

  NEW FEATURES
